One of many attempts to fix images on mobile

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -287,7 +287,7 @@ text-align: center;
 	background: $color_medium;
 	color: #fff;
 	padding: 2em 0;
-	overflow: hidden;
+	margin-top: 2em;
 }
 .extras.extas_altcolor {
 	background: $color_dark;
